--- a/public/docs.html
+++ b/public/docs.html
@@ -19,10 +19,9 @@
     </header>
     
     <h2>Welcome to my page on Found Heaven On Tour!</h2>
-
-    <img id = "pic" src = "https://www.universalmusic.ca/files/2024/03/Found-Heaven-On-Tour-Poster-scaled.jpeg" >
-    <h3>Here I have information on Conan Gray's Found Heaven On Tour and his stops!</h3>
-    <p>Go to the docs page for more info!</p>
+    <h3>In this site, you can see all of the shows that Conan Gray played during his tour for his recent album Found Heaven.</h3>
+    <h3>Go to /shows to see all of Conan Gray's shows he performed durind FHOT</h3>
+    <h3>Go to /region/num to find a specific show (regions and nums include: australia (0-4), asia (0-6), northAmerica (0-18), and europe (0-4))</h3>
 </body>
 </html>
 
